--- a/app/src/main/res/layout/activity_donateinput.xml
+++ b/app/src/main/res/layout/activity_donateinput.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:id="@+id/inputrelate"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="250dp"
         tools:ignore="MissingConstraints">
 
         <ImageView
@@ -36,7 +36,7 @@
             android:textAppearance="@style/company_donate"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="155dp" />
+            android:layout_marginTop="100dp" />
 
         <TextView
             android:id="@+id/donationName_donate"
@@ -46,13 +46,13 @@
             android:textAppearance="@style/donationName_donate"
             android:textStyle="bold"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="180dp" />
+            android:layout_marginTop="130dp" />
 
     </RelativeLayout>
     <View
         android:id="@+id/inputbox"
         android:layout_width="match_parent"
-        android:layout_height="510dp"
+        android:layout_height="480dp"
         android:background="@drawable/rounded_box"
         app:layout_constraintTop_toBottomOf="@id/donationName_donate"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-100dp"
+        android:layout_marginTop="-80dp"
         app:layout_constraintTop_toBottomOf="@id/inputrelate"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp">
@@ -73,7 +73,6 @@
             android:layout_margin="30dp"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="20dp"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="10dp">
 
@@ -122,29 +121,35 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp">
-                <Button
-                    android:id="@+id/button1"
-                    android:layout_width="99dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="+ 1,000원"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"/>
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <Button
+                        android:id="@+id/button1"
+                        android:layout_width="99dp"
+                        android:layout_height="wrap_content"
+                        android:text="+ 1,000원"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"/>
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="99dp"
-                    android:layout_height="wrap_content"
-                    android:text="+ 5,000원"
-                    android:layout_toRightOf="@id/button1"
-                    android:layout_centerVertical="true"/>
+                    <Button
+                        android:id="@+id/button2"
+                        android:layout_width="99dp"
+                        android:layout_height="wrap_content"
+                        android:text="+ 5,000원"
+                        android:layout_toRightOf="@id/button1"
+                        android:layout_centerVertical="true"/>
 
-                <Button
-                    android:id="@+id/button3"
-                    android:layout_width="99dp"
-                    android:layout_height="wrap_content"
-                    android:text="+ 10,000원"
-                    android:layout_toRightOf="@id/button2"
-                    android:layout_centerVertical="true"/>
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="99dp"
+                        android:layout_height="wrap_content"
+                        android:text="+ 10,000원"
+                        android:layout_toRightOf="@id/button2"
+                        android:layout_centerVertical="true"/>
+                </LinearLayout>
             </RelativeLayout>
 
             <RelativeLayout
