--- a/app/src/main/res/layout/activity_donated_card.xml
+++ b/app/src/main/res/layout/activity_donated_card.xml
@@ -4,60 +4,106 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+
     <ImageView
         android:id="@+id/selectedimage1"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:src="@drawable/check"
-        android:scaleType="centerInside"
-        android:clipToOutline="true"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintWidth_percent="0.6667"
-        app:layout_constraintHeight_percent="0.6667"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.27" />
+        android:layout_marginBottom="20dp"/>
 
     <TextView
         android:id="@+id/donateDoneTitle"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
-        android:text="@string/donateDoneTitle"
+        android:text="가상 계좌 정보"
         android:textAppearance="@style/donateDoneTitle"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="294dp" />
+        tools:ignore="MissingConstraints"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:background="@drawable/rounded_btn"
+        android:backgroundTint="#F3F3F3"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="가상계좌: "/>
+
+            <TextView
+                android:id="@+id/virtual_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="하나은행 1234-4567-789"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="입금 기한: "/>
+
+            <TextView
+                android:id="@+id/deposit_deadline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2023-08-05 23:59"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/donateDoneContent"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/donateDoneContent"
+        android:text="@string/notice"
+        android:textColor="#EC1C24"
         android:textAppearance="@style/donateDoneContent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="353dp" />
+        android:layout_marginBottom="20dp"/>
+
+        <TextView
+        android:id="@+id/donateDoneContent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:text="@string/check"
+        android:textAppearance="@style/donateDoneContent" />
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:background="@color/teal_700"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_btn"
+        android:padding="10dp"
         android:gravity="center"
         android:text="@string/checkDonate"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="513dp" />
+        tools:ignore="MissingConstraints"/>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
