--- a/app/src/main/res/layout/activity_donated_card.xml
+++ b/app/src/main/res/layout/activity_donated_card.xml
@@ -75,7 +75,6 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/donateDoneContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -85,7 +84,6 @@
         android:layout_marginBottom="20dp"/>
 
         <TextView
-        android:id="@+id/donateDoneContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -94,6 +92,7 @@
         android:textAppearance="@style/donateDoneContent" />
 
     <Button
+        android:id="@+id/toMypage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_btn"
