--- a/app/src/main/res/layout/donation_tree.xml
+++ b/app/src/main/res/layout/donation_tree.xml
@@ -2,12 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="400dp"
     android:layout_height="500dp"
+    android:background="@drawable/rounded_transparent"
     tools:context=".DonationTree">
 
     <LinearLayout
         android:layout_width="400dp"
         android:layout_height="500dp"
         android:gravity="center"
+        android:background="@drawable/rounded_transparent"
         android:layout_gravity="center"
         android:orientation="vertical">
 
@@ -60,7 +62,7 @@
         </LinearLayout>
 
         <RelativeLayout
-            android:layout_width="300dp"
+            android:layout_width="320dp"
             android:layout_height="0dp"
             android:layout_weight="7">
 
@@ -79,6 +81,19 @@
                 android:scaleType="centerCrop" />
 
         </RelativeLayout>
+
+        <TextView
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_width="400dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:id="@+id/donationpercent"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:text="100%"/>
 
         <TextView
             android:layout_gravity="center"
