--- a/app/src/main/res/layout/item_mydon.xml
+++ b/app/src/main/res/layout/item_mydon.xml
@@ -11,8 +11,8 @@
     android:layout_marginBottom="10dp"
     tools:ignore="MissingDefaultResource">
 
-    <ImageView
-        android:id="@+id/selectedimage1"
+    <ImageButton
+        android:id="@+id/participatedimage"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@drawable/rounded_box"
