--- a/app/src/main/res/layout/activity_donateinput.xml
+++ b/app/src/main/res/layout/activity_donateinput.xml
@@ -28,31 +28,36 @@
             android:clipToOutline="true"
             android:alpha="0.5"/>
 
-        <TextView
-            android:id="@+id/company_donate"
-            android:layout_width="385dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/company"
-            android:textAppearance="@style/company_donate"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp" />
+            android:orientation="vertical"
+            android:padding="15dp">
+            <TextView
+                android:id="@+id/company_donate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/company"
+                android:textAppearance="@style/company_donate"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="100dp" />
 
-        <TextView
-            android:id="@+id/donationName_donate"
-            android:layout_width="385dp"
-            android:layout_height="wrap_content"
-            android:text="@string/donationName"
-            android:textAppearance="@style/donationName_donate"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="130dp"/>
+            <TextView
+                android:id="@+id/donationName_donate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/donationName"
+                android:textAppearance="@style/donationName_donate"
+                android:textStyle="bold"
+                android:layout_centerHorizontal="true"/>
+        </LinearLayout>
 
     </RelativeLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-80dp"
+        android:layout_marginTop="-60dp"
         app:layout_constraintTop_toBottomOf="@id/inputrelate"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="0dp">
@@ -105,7 +110,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/textbox"
-                    android:paddingLeft="5dp" />
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -165,8 +171,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="15dp"
-                    android:background="@drawable/textbox"
-                    android:paddingLeft="5dp" />
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:background="@drawable/textbox" />
 
                 <TextView
                     android:layout_width="wrap_content"
