--- a/app/src/main/res/layout/activity_donated_card.xml
+++ b/app/src/main/res/layout/activity_donated_card.xml
@@ -74,26 +74,29 @@
         </LinearLayout>
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/notice"
-        android:textColor="#EC1C24"
-        android:textAppearance="@style/donateDoneContent"
-        android:layout_marginBottom="20dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:gravity="center_horizontal"
+            android:text="@string/notice"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:textAppearance="@style/donateDoneContent"
+            android:textColor="#EC1C24" />
 
         <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+            android:textSize="15dp"
         android:layout_marginBottom="20dp"
         android:text="@string/check"
         android:textAppearance="@style/donateDoneContent" />
 
     <Button
         android:id="@+id/toMypage"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_btn"
         android:padding="10dp"
