--- a/app/src/main/res/layout/activity_donatepay.xml
+++ b/app/src/main/res/layout/activity_donatepay.xml
@@ -11,12 +11,14 @@
         android:id="@+id/inputrelate"
         android:layout_width="match_parent"
         android:layout_height="170dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         tools:ignore="MissingConstraints">
 
         <ImageView
             android:id="@+id/selectedimage1"
             android:layout_width="357dp"
-            android:layout_height="122dp"
+            android:layout_height="140dp"
             android:layout_centerInParent="true"
             android:layout_marginTop="32dp"
             android:background="@drawable/rounded_box"
@@ -30,7 +32,7 @@
         <ImageView
             android:id="@+id/black"
             android:layout_width="357dp"
-            android:layout_height="122dp"
+            android:layout_height="140dp"
             android:layout_centerInParent="true"
             android:alpha="0.5"
             android:background="@drawable/rounded_box"
