--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -37,7 +37,7 @@
                     android:layout_margin="10dp"
                     app:civ_border_width="2dp"
                     app:civ_fill_color="#23f22f"
-                    app:civ_border_color="@color/design_default_color_primary_dark"
+                    app:civ_border_color="#022A75"
                     android:src="@drawable/profile3"
                     android:layout_width="80dp"
                     android:layout_height="80dp" />
