--- a/app/src/main/res/layout/fragment_4.xml
+++ b/app/src/main/res/layout/fragment_4.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment4"
-    android:background="#F5F5F5"
-    android:padding="10dp">
+    android:background="#F5F5F5">
 
     <LinearLayout
         android:layout_width="match_parent"
