--- a/app/src/main/res/layout/item_mydon.xml
+++ b/app/src/main/res/layout/item_mydon.xml
@@ -36,6 +36,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/Title"
@@ -57,14 +58,14 @@
                     android:layout_marginTop="5dp"
                     android:layout_alignParentEnd="true">
 
-                    <Button
-                        android:id="@+id/donBtn"
+                    <TextView
+                        android:id="@+id/deposit"
                         android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:text="확인하기"
-                        android:textColor="@color/white"
+                        android:layout_height="wrap_content"
+                        android:text="입금 여부 연결 "
                         android:textSize="15dp"
-                        android:background="@drawable/rounded_btn"/>
+                        tools:ignore="TextSizeCheck"
+                        android:layout_gravity="end"/>
 
                 </LinearLayout>
 
@@ -97,14 +98,14 @@
                     android:layout_marginTop="5dp"
                     android:layout_alignParentEnd="true">
 
-                    <TextView
-                        android:id="@+id/deposit"
+                    <Button
+                        android:id="@+id/donBtn"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="입금 여부 연결 "
+                        android:layout_height="30dp"
+                        android:text="확인하기"
+                        android:textColor="@color/white"
                         android:textSize="15dp"
-                        tools:ignore="TextSizeCheck"
-                        android:layout_gravity="end"/>
+                        android:background="@drawable/rounded_btn"/>
 
                 </LinearLayout>
 
